--- a/paper/CADE/sources.bib
+++ b/paper/CADE/sources.bib
@@ -324,3 +324,40 @@ author = {Domenico Cantone and Jacob T. Schwartz and Calogero G. Zarba},
   organization={SBC}
 }
 
+@article{hf_AFP,
+  author  = {Lawrence C. Paulson},
+  title   = {Gödel's Incompleteness Theorems},
+  journal = {Archive of Formal Proofs},
+  month   = {November},
+  year    = {2013},
+  note    = {\url{https://isa-afp.org/entries/Incompleteness.html},
+            Formal proof development},
+  ISSN    = {2150-914x},
+}
+
+@article{hf_goedel,
+  title={A MACHINE-ASSISTED PROOF OF GÖDEL’S INCOMPLETENESS THEOREMS FOR THE THEORY OF HEREDITARILY FINITE SETS},
+  volume={7},
+  DOI={10.1017/S1755020314000112},
+  number={3},
+  journal={The Review of Symbolic Logic},
+  publisher={Cambridge University Press},
+  author={Paulson, Lawrence C.},
+  year={2014},
+  pages={484–498}
+}
+
+@InProceedings{hf_automata,
+  author="Paulson, Lawrence C.",
+  editor="Felty, Amy P.
+  and Middeldorp, Aart",
+  title="A Formalisation of Finite Automata Using Hereditarily Finite Sets",
+  booktitle="Automated Deduction - CADE-25",
+  year="2015",
+  publisher="Springer International Publishing",
+  address="Cham",
+  pages="231--245",
+  isbn="978-3-319-21401-6",
+  doi="10.1007/978-3-319-21401-6_15"
+}
+
