--- a/paper/CADE/sources.bib
+++ b/paper/CADE/sources.bib
@@ -326,11 +326,11 @@ author = {Domenico Cantone and Jacob T. Schwartz and Calogero G. Zarba},
 
 @article{hf_AFP,
   author  = {Lawrence C. Paulson},
-  title   = {Gödel's Incompleteness Theorems},
+  title   = {The Hereditarily Finite Sets},
   journal = {Archive of Formal Proofs},
   month   = {November},
   year    = {2013},
-  note    = {\url{https://isa-afp.org/entries/Incompleteness.html},
+  note    = {\url{https://isa-afp.org/entries/HereditarilyFinite.html},
             Formal proof development},
   ISSN    = {2150-914x},
 }
