--- a/paper/CADE/paper.tex
+++ b/paper/CADE/paper.tex
@@ -126,7 +126,8 @@
 \newcommand{\hfmem}{\boldsymbol{\in}}
 \newcommand{\hfnotmem}{\boldsymbol{\notin}}
 
-\newcommand{\fmAnd}[2]{#1 $\boldsymbol{\land}$ #2}
+\newcommand{\fmAndSymbol}{\boldsymbol{\land}}
+\newcommand{\fmAnd}[2]{#1 $\fmAndSymbol$ #2}
 \newcommand{\fmOr}[2]{#1 $\boldsymbol{\lor}$ #2}
 \newcommand{\fmNegSymbol}{\boldsymbol{\neg}}
 \newcommand{\fmNeg}[1]{$\fmNegSymbol\:$#1}
@@ -150,10 +151,12 @@
   Using Isabelle/HOL, we verify the state-of-the-art decision procedure for multi-level syllogistic with singleton (\MLSS{} for short), which is a ground fragment of set theory.
   We formalise the syntax and semantics of \MLSS{} as well as a sound and complete tableau calculus for it.
   We also provide an abstract specification of a decision procedure that applies the rules of the calculus exhaustively and prove its termination.
-  \keywords{First TODO \and Second TODO}
+  \keywords{First TODO \and Second TODO\todo{keywords}}
 \end{abstract}
 
 \listoftodos{}
+
+\clearpage
 
 \section{Introduction}
 In contrast to pen-and-paper proofs where we expect the reader to fill in trivial details, interactive theorem provers (ITPs) require us to justify each proof step rigorously.
@@ -181,7 +184,7 @@ The formalisation follows the paper closely but gives a more thorough account of
   \item We deliver the omitted proof of Lemma~2 in the paper~\cite{new_fast_tableau}, which is a key building block for the completeness proof of the calculus.
   \item The formal proof of completeness lead to the discovery that the calculus was missing a rule for eliminating double negation. 
   \item We derive an explicit upper bound for the number of formulae in a branch of the tableau.
-  \item We restrict one branching rule TODO.
+  \item We restrict one branching rule\todo{Elaborate}.
 \end{itemize}
 
 \subsection{Related Work}
@@ -201,7 +204,7 @@ In Lean, there is a verified tableau calculus for basic modal logic~\cite{modal_
 In Coq, there is a formalisation of a tableau calculus for ecumenical logic~\cite{ecumenical_logic}; it is, however, missing a completeness proof.
 Concerning Isabelle/HOL, there is formalisation of a sound and complete tableau calculus for hybrid logic~\cite{hybrid_logic} available in the \textit{Archive of Formal Proofs}~\cite{hybrid_logic_afp}.
 The termination proof is part of ongoing work~\cite{hybrid_logic_workshop}.
-TODO: Mention SteP, Check reviewer comment.
+\todo[inline]{Mention SteP, Check reviewr comment}
 % TODO: Formalisation de la logique temporelle dans le coq.
 
 \subsection{Notation}
@@ -259,7 +262,7 @@ definition vars $\phi$ $\equiv$ $\bigcup$(vars ` atoms $\phi$)
 \end{lstlisting}
 
 Similarly to \lstinline!vars!, we introduce the overloaded constant \lstinline!subterms :: 'b $\Rightarrow$ 'a pset_term set!, which returns all the set terms that are subterms of a set term, set atom, or formula, respectively. Lastly, we consider the subformulae of a formula and define a function \lstinline!subfms :: 'a fm $\Rightarrow$ 'a fm set! that computes them.
-The functions \lstinline!subterms! and \lstinline!subfms! are defined in the usual way (cf. Appendix TODO).
+The functions \lstinline!subterms! and \lstinline!subfms! are defined in the usual way (cf. Appendix \todo{reference Appendix}).
 
 \textit{Literals} are a type of subformulae of particular importance, so we define a predicate for them.
 \begin{lstlisting}
@@ -520,7 +523,7 @@ it decides the satisfiability of a given formula \lstinline!$\phi$! by determini
 More specifically, it initialises the tableau with the singleton branch \lstinline![$\phi$]! and checks whether this branch can be expanded to a closed tableau.
 
 We abstractly specify the behaviour of the decision procedure, leaving an executable specification from which code can be generated to future work.
-The implementation as displayed in TODO uses a couple of features of Isabelle/HOL's function package:
+The implementation as displayed in \todo{How to reference algorithm?} uses a couple of features of Isabelle/HOL's function package:
 instead of defining the function via pattern matching, we specify the equations of the function as conditional rewrite rules.
 This requires us to prove that the assumptions of the equations are non-overlapping, which is done by automation.
 The other concern is that Isabelle/HOL requires functions to be total, so a recursive function needs to terminate in order for it to be well-defined;
@@ -547,8 +550,7 @@ In the definition below, the expression \lstinline!&\expandss{b'}{b}&! denotes t
 definition wf_branch b $\equiv$ $\exists$$\phi$. &\expandss{b}{[$\phi$]}&
 \end{lstlisting}
 
-In particular, we will use this notion in \autoref{sec:bound} where we derive an upper bound for the cardinality of well-formed branches.
-This is then used in \autoref{sec:correct} to justify the termination of the decision procedure. 
+In particular, we will use this notion in \autoref{sec:correct} to state an upper bound for the cardinality of well-formed branches, with which we justify the termination of the decision procedure. 
 Before we come to that, though, we prove soundness and completeness in Section~\ref{sec:sound} and~\ref{sec:complete}, respectively.
 In \autoref{sec:correct}, we also show that both properties easily transfer to \lstinline!mlss_proc! which, together with termination, establishes that it is a decision procedure.
 
@@ -625,7 +627,7 @@ for some fresh \lstinline!x! and \lstinline!y!.
 Assigning both \lstinline!Var x! and \lstinline!Var y! a value of \lstinline!0! would contradict the literal \lstinline!Var x $\neqS$ Var y!.
 To prevent this, we assign the pure witnesses pairwise different values.
 
-The proof of \hyperref[lst:lemma_2]{\lstinline!lemma_2!} is more technical than interesting so we refer the reader to the formalisation or paper TODO.
+The proof of \hyperref[lst:lemma_2]{\lstinline!lemma_2!} is more technical than interesting so we refer the reader to the formalisation.
 
 \subsection{Realisation of an Open Branch\label{sec:real}}
 Remember that for completeness, we need to show that the realisation function for an open and saturated branch \lstinline!b! actually constitutes a model for all formulae in the branch.
@@ -698,7 +700,7 @@ lemma bclosed_sound:
 \begin{proof}
   It is clear that, for any \lstinline!s!, neither does \lstinline!M! model \lstinline!s $\in$ $\emptyset$! nor \lstinline!s $\neqS$ s!.
   Furthermore, no model can satisfy both \lstinline!$\phi$! and \lstinline!&\fmNeg{$\phi$}&! at the same time.
-  Lastly, a membership cycle is impossible since the membership relation of \lstinline!hf! is well-founded (see \autoref{sec:semantics} TODO).
+  Lastly, a membership cycle is impossible since the membership relation of \lstinline!hf! is well-founded.
 \end{proof}
 
 \noindent We are left with showing that both linear and branching expansion rules preserve satisfiability.
@@ -730,49 +732,24 @@ lemma bexpands_sound:
   Furthermore, it is also a model for the first branch in \lstinline!bs'!, which finishes the proof.
 \end{proof}
 
-\section{Bounding the Cardinality of a Branch\label{sec:bound}}
-All in all, we get the following lemma.
+\section{Total Correctness of the Decision Procedure\label{sec:correct}}
+We first demonstrate the termination of the procedure for well-formed branches, i.e.\ every well-formed branch is in the domain of \lstinline!mlss_proc_branch!.
+To this end, we derive an upper bound for the number of distinct formulae in a branch whose proof we omit here for brevity (cf. Appendix\todo{Reference Appendix}).
+We should point out that this bound is not to be construed as the complexity of the procedure as it may create exponentially many branches in general.
 \begin{lstlisting}[label={lst:card_branch}]
 lemma card_wf_branch_ub:
   assumes wf_branch b
-  shows |set b|
-      $\leq$ 2 * |subfms (last b)| + 16 * |subterms (last b)|$^\text{4}$
+  shows |set b| $\leq$ 2$\:$*$\,$|subfms (last b)| + 16$\:$*$\,$|subterms (last b)|$^\text{4}$
 \end{lstlisting}
-
-\section{Total Correctness of the Decision Procedure\label{sec:correct}}
-We first prove the termination of the procedure for well-formed branches, i.e.\ every well-formed branch is in the domain of \lstinline!mlss_proc_branch!.
-\begin{lstlisting}[belowskip=0pt]
+Remember that \lstinline!mlss_proc_branch! only applies a linear expansion rule to a branch if the application results in new formulae.   
+Moreover, the subsumption conditions of the branching expansion rules ensure that each of the newly created branches contain new formulae.
+Ultimately, we conclude that the procedure must terminate because the number of formualae increases in each step but it is also bounded. 
+\begin{lstlisting}
 lemma mlss_proc_branch_dom_if_wf_branch:
   assumes wf_branch b shows mlss_proc_branch_dom b
 \end{lstlisting}
-\begin{proof}
-  We proceed by strong induction on the difference between the upper bound due to \hyperref[lst:card_branch]{\lstinline!card_wf_branch_ub!} and \lstinline!|b|!.
 
-  We only have one inductive case where the induction hypothesis holds for all well-formed branches \lstinline!b'! where the difference between the upper bound and the cardinality is smaller than that of \lstinline!b!.
-  We strengthen the assumptions of the induction hypothesis to obtain
-\begin{lstlisting}
-  $\llbracket$ &\expandss{b'}{b}&; set b $\subset$ set b' $\rrbracket$ $\Longrightarrow$ mlss_proc_branch_dom b'
-\end{lstlisting}
-for all \lstinline!b'!.
-The former strengthening is admissible since, by definition, every expansion of a well-formed branch is again well-formed while the latter ensures that the cardinality of \lstinline!b'! is larger than the cardinality of \lstinline!b!, implying that the difference to the upper bound decreases.
-
-Now, consider the case where \lstinline!b! is saturated.
-Then, the procedure terminates without recursive calls and we immediately get \lstinline!mlss_proc_branch_dom b! using the corresponding introduction rule for the domain predicate.
-
-If \lstinline!b! is not saturated, we can expand \lstinline!b! using a linear or a branching rule, which adds new formulae to the resulting branch(es).
-In the first case, we can thus choose a branch \lstinline!b'! with \lstinline!SOME! that linearly expands \lstinline!b!.
-Moreover, the domain predicate holds for \lstinline!b' @ b! since the assumptions of the modified induction hypothesis are fulfilled.
-Ultimately, we use the corresponding introduction rule
-\begin{lstlisting}
-  $\llbracket$ $\neg$ lin_sat b; mlss_proc_branch_dom (b' @ b) $\rrbracket$
-  $\Longrightarrow$ mlss_proc_branch_dom b
-\end{lstlisting}
-for the domain predicate to obtain \lstinline!mlss_proc_branch b!.
-
-The case of a branching rule is analogous.
-\end{proof}
-
-\noindent The above lemma allows us to use the computation induction rule of \lstinline!mlss_proc_branch! on well-formed branches, which we use to prove soundness and completeness.
+The above lemma allows us to use the computation induction rule of \lstinline!mlss_proc_branch! on well-formed branches, which we use to prove soundness and completeness.
 As both proofs are essentially an application of soundness, respectively completeness, of the calculus, we refer the reader to the formalisation.
 \begin{lstlisting}
 lemma mlss_proc_branch_complete:
@@ -796,6 +773,25 @@ theorem mlss_proc_complete:
 theorem mlss_proc_sound:
   assumes M $\models$ $\phi$ shows $\neg$ mlss_proc $\phi$
 \end{lstlisting}
+
+\section{Dealing with Urelements}
+In the introduction, we motivated the verification of \lstinline!mlss_proc! with the prospect of integrating it as a tactic into Isabelle.
+For this to work, we need to replay a proof in the tableau calculus through Isabelle/HOL, i.e.\ we need to map every branch expansion rule to a corresponding theorem in Isabelle/HOL.
+This is straightforward for all expansion rules except for the last branching expansion rule.
+To illustrate, suppose that we are to disprove a statement of the form \lstinline!s $\neq$ (t :: 'a) $\land$ s $\in$ (A :: 'a set) $\cup$ B $\land$ $\ldots$! in Isabelle/HOL
+that corresponds to \lstinline!s' $\neqS$ t' $\fmAndSymbol$ s' $\inS$ A' $\unionS$ B' $\fmAndSymbol$ $\ldots$! in our set syntax.
+Applying the decision procedure to this goal might result in a tableau proof containing an application of the last branching rule rule to \lstinline!(s' $\neqS$ t') $\in$ set b!, which creates the branches \lstinline![Var x $\inS$ s', Var x $\notinS$ t'] @ b! and \lstinline![Var x $\notinS$ s', Var x $\inS$ t'] @ b!.
+But this can not be converted to a proof in Isabelle/HOL since \lstinline!s! and \lstinline!t! are not sets.
+
+To deal with this problem, we introduce a light-weight type system that, given a mapping from variables to natural numbers, assigns a natural number to each set term. 
+
+\begin{itemize}
+  \item Give example from HOL
+  \item Show how branch is expanded
+  \item Mention implemented constraint solver
+  \item Show how definition of realise needs to be changed
+  \item Syntax needs to be changed for empty set
+\end{itemize}
 
 \section{Conclusion and Future Work}
 By closely following a paper by \citeauthor{new_fast_tableau}~\cite{new_fast_tableau}, we developed a formalisation of a tableau calculus for a ground fragment of set theory called \MLSS{}.
@@ -948,7 +944,7 @@ fun &\Isa& :: ('a $\Rightarrow$ hf) $\Rightarrow$ 'a pset_atom $\Rightarrow$ boo
     \bottomrule
   \end{tabular}
   \bigskip
-  \caption{Linear expansion rules.\label{tab:lexpands}}
+  \caption{Linear expansion rules}
 \end{table*}
 
 \begin{table*}
@@ -1061,7 +1057,7 @@ fun &\Isa& :: ('a $\Rightarrow$ hf) $\Rightarrow$ 'a pset_atom $\Rightarrow$ boo
          \bottomrule
   \end{tabular}
   \bigskip
-  \caption{Branching expansion rules.\label{tab:bexpands} We write \lstinline!$\phi$! for \lstinline!last b! here.}
+  \caption{Branching expansion rules. We write \lstinline!$\phi$! for \lstinline!last b! here.}
 \end{table*}
 
 \section{Upper-Bounding the Cardinality of a Branch}
